# Unnamed-Roguelike

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  asciitab  asciitab.cpp  attacktest.cpp  brudnopis  brudnopis.cpp  circlemask.mask  crashtest.cpp  demo.cpp  generated_items.txt  invcrashtest.cpp  itemgentest.cpp  main.cpp  menutest.cpp  mockinventory.cpp  mockinventoryworking.cpp  resetcrashtest.cpp  serializationtest.cpp  sertest.cpp  tester.cpp
archived/: attacktest.cpp  brudnopis.cpp  demo.cpp  effecttest.cpp  invcrashtest.cpp  itemgentest.cpp  menutest.cpp  serializationtest.cpp  tester.cpp  valtest.cpp
src/: CMakeLists.txt  TileTypes.h  entity.h  entity_animate.h  item.h  monster.h  player.h  rarity.h  tile.h
src/game/: CMakeLists.txt  TileTypes.h  action.h  ai_enum.h  armor.h  component.h  componentcaster.h  consumable.h  coordhash.h  directions.h  effect.h  entity.cpp  entity.h  entitydeserializer.h  entityhash.h  entityholder.h  entitytypes.h  flagcomparator.h  gamemanager.h  globals.h  health_enum.h  item.h  itemtypes.h  monster.h  monsters.h  observerptr.h  player.h  rarity.h  system.h  tile.h
src/game/UI/: CMakeLists.txt  gamescreen.cpp  gamescreen.h  highscoresaver.cpp  highscoresaver.h  inventory.cpp  inventory.h  logs.cpp  logs.h  mainmenu.cpp  mainmenu.h  savescreen.cpp  savescreen.h
src/game/components/: CMakeLists.txt  actioncomponent.h  aicomponent.cpp  aicomponent.h  amuletslot.cpp  amuletslot.h  armorcomponent.cpp  armorcomponent.h  armorslot.cpp  armorslot.h  buffcomponent.cpp  buffcomponent.h  components_all.h  coordinates.cpp  coordinates.h  critcomponent.cpp  critcomponent.h  description.cpp  description.h  effectcomponent.cpp  effectcomponent.h  experiencecomponent.cpp  experiencecomponent.h  health.cpp  health.h  hungercomponent.cpp  hungercomponent.h  interaction.h  inventory.cpp  inventory.h  itemcomponent.cpp  itemcomponent.h  lineofsightcomponent.cpp  lineofsightcomponent.h  name.cpp  name.h  navmapcomponent.cpp  navmapcomponent.h  stackable.h  testcomponent.h  (+10 more)
src/game/systems/: CMakeLists.txt  actionsystem.h  aisystem.cpp  aisystem.h  attacksystem.cpp  attacksystem.h  effectsystem.cpp  effectsystem.h  entitymanager.cpp  entitymanager.h  experiencesystem.cpp  experiencesystem.h  healthregistry.h  healthsystem.cpp  healthsystem.h  inventorysystem.cpp  inventorysystem.h  lineofsightsystem.cpp  lineofsightsystem.h  logsystem.cpp  logsystem.h  mapmanager.cpp  mapmanager.h  navmapmanager.cpp  navmapmanager.h  playerinputsystem.h  playersystem.cpp  playersystem.h  positionsystem.cpp  positionsystem.h
src/game/systems/factories/: CMakeLists.txt  itemfactory.cpp  itemfactory.h  monstercheatsheet.txt  monsterfactory.cpp  monsterfactory.h
src/game/systems/generators/: CMakeLists.txt  cavegenerator.cpp  cavegenerator.h  debugmapgenerator.cpp  debugmapgenerator.h  mapgenerator.h
src/permissive_fov/: CMakeLists.txt
